flask-microservices/envoy-proxy.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/films"
                route:
                  cluster: film-service-cluster
              - match:
                  prefix: "/ratings"
                route:
                  cluster: rating-service-cluster
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: film-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: film-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: film-service
                port_value: 5000
  - name: rating-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: rating-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rating-service
                port_value: 6000
